# multistore

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE.md  docker-compose.yaml  release-please-config.json
.cargo/: audit.toml
.claude/: settings.json
.github/workflows/: ci.yml  claude-review.yml  conventional-commit-prs.yml  deploy.yml  docs-preview.yml  docs.yml  preview.yml  production.yml  release-please.yml  release.yml  staging.yml
crates/backend-federation/: Cargo.toml  README.md
crates/backend-federation/src/: aws.rs  cache.rs  credentials.rs  error.rs  lib.rs
crates/backend-federation/tests/: live_sts.rs
crates/cf-workers/: Cargo.toml  README.md
crates/cf-workers/src/: backend.rs  body.rs  cors.rs  headers.rs  lib.rs  noop_creds.rs  request.rs  response.rs  tracing_layer.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: aws_chunked.rs  cors.rs  error.rs  forwarder.rs  lib.rs  maybe_send.rs  middleware.rs  oidc_backend.rs  proxy.rs  resolver.rs  route_handler.rs  router.rs  s3.rs  service.rs  types.rs
crates/core/src/api/: delete.rs  list.rs  list_rewrite.rs  mod.rs  pagination.rs  raw_list.rs  request.rs  response.rs
crates/core/src/auth/: authorize.rs  authorize_impl.rs  identity.rs  mod.rs  sigv4.rs  tests.rs
crates/core/src/backend/: auth.rs  list.rs  mod.rs  multipart.rs  request_signer.rs  url_signer.rs
crates/core/src/config/: cached.rs  dynamodb.rs  http.rs  mod.rs  postgres.rs  static_file.rs
crates/core/src/registry/: bucket.rs  credential.rs  mod.rs
crates/core/src/s3/: list.rs  mod.rs  multipart.rs  response.rs  signer.rs
crates/core/tests/: conditional_writes.rs  key_encoding_contract.rs
crates/credential-cache/: Cargo.toml
crates/credential-cache/src/: lib.rs
crates/federation/: Cargo.toml
crates/federation/src/: aws.rs  credentials.rs  error.rs  lib.rs
crates/metering/: Cargo.toml  README.md
crates/metering/src/: lib.rs
crates/oidc-provider/: Cargo.toml  README.md
crates/oidc-provider/src/: backend_auth.rs  cache.rs  jwks.rs  lib.rs  route_handler.rs
crates/oidc-provider/src/exchange/: aws.rs  azure.rs  gcp.rs  mod.rs
crates/path-mapping/: Cargo.toml  README.md
crates/path-mapping/src/: lib.rs
crates/path-mapping/tests/: mapping_tests.rs
crates/static-config/: Cargo.toml  README.md
crates/static-config/src/: lib.rs
crates/sts/: Cargo.toml  README.md
crates/sts/src/: aws_identity.rs  caller_identity.rs  jwks.rs  lib.rs  request.rs  responses.rs  route_handler.rs  sealed_token.rs  sts.rs
docs/: index.md  package.json  pnpm-lock.yaml  wrangler.preview.toml
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/architecture/: caching.md  crate-layout.md  index.md  multi-runtime.md  request-lifecycle.md
docs/auth/: aws-iam-auth.md  backend-auth.md  index.md  proxy-auth.md  sealed-tokens.md
docs/configuration/: buckets.md  cors.md  index.md  roles.md
docs/configuration/providers/: cached.md  dynamodb.md  http.md  index.md  postgres.md  static-file.md
docs/deployment/: cloudflare-workers.md  server.md
docs/extending/: custom-backend.md  custom-provider.md  custom-resolver.md  index.md
docs/getting-started/: index.md  local-development.md
docs/reference/: config-example.md  errors.md  operations.md
examples/cf-workers/: Cargo.toml  wrangler.deploy.toml  wrangler.integration.toml  wrangler.preview.toml  wrangler.production.toml  wrangler.staging.toml  wrangler.toml
examples/cf-workers-api/: Cargo.toml
examples/cf-workers-api/src/: lib.rs
examples/cf-workers/src/: bandwidth.rs  client.rs  lib.rs  metering.rs  rate_limit.rs
examples/lambda/: Cargo.toml
examples/lambda/src/: client.rs  main.rs
examples/server/: Cargo.toml  config.toml
examples/server/src/: axum_helpers.rs  cached.rs  client.rs  lib.rs  server.rs
multistore/src/: data_source.rs
multistore/src/credentials/: in_memory.rs
scripts/: integration-test.sh
tests/integration/: test_integration.py
tests/smoke/: test_federation.py  test_smoke.py
