[workspace]
members = [
    "crates/core",
    "crates/cf-workers",
    "crates/metering",
    "crates/path-mapping",
    "crates/static-config",
    "crates/sts",
    "crates/oidc-provider",
    "examples/server",
    "examples/lambda",
    "examples/cf-workers",
]
default-members = [
    "crates/core",
    "crates/metering",
    "crates/path-mapping",
    "crates/static-config",
    "crates/sts",
    "crates/oidc-provider",
    "examples/server",
    "examples/lambda",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Core
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bytes = "1"
http = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "js"] }
base64 = "0.22"
rand = "0.8"
hex = "0.4"
url = "2"
percent-encoding = "2"
matchit = "0.8"

# Crypto
hmac = "0.12"
sha2 = { version = "0.10", features = ["oid"] }
rsa = "0.9"
aes-gcm = "0.10"

# Object store
object_store = { version = "0.13.1", default-features = false, features = ["aws"] }
futures = "0.3"

# XML
quick-xml = { version = "0.37", features = ["serialize"] }

# Auth
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# HTTP body
http-body = "1"

# Web framework
axum = { version = "0.8", default-features = false }
tower-service = "0.3"

# Server runtime
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cloudflare Workers
# Pinned to 0.7.4: worker 0.7.5 bumped wasm-streams 0.4→0.5, which conflicts with
# reqwest 0.12 (via object_store). Unblocked when object_store upgrades to reqwest 0.13.
worker = { version = "=0.7.4" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Headers",
    "ReadableStream",
    "Request",
    "RequestCache",
    "RequestInit",
    "Response",
    "ResponseInit",
] }
console_error_panic_hook = "0.1.7"

# Lambda
lambda_http = "0.13"

# Internal crates
multistore = { path = "crates/core", version = "0.4.0" }
multistore-static-config = { path = "crates/static-config", version = "0.4.0" }
multistore-sts = { path = "crates/sts", version = "0.4.0" }
multistore-metering = { path = "crates/metering", version = "0.4.0" }
multistore-cf-workers = { path = "crates/cf-workers", version = "0.4.0" }
multistore-oidc-provider = { path = "crates/oidc-provider", version = "0.4.0" }
multistore-path-mapping = { path = "crates/path-mapping", version = "0.4.0" }
