[package]
name = "multistore-cf-workers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cloudflare Workers runtime adapters for the multistore S3 proxy gateway"

[features]
default = []
azure = ["multistore/azure"]
gcp = ["multistore/gcp"]

[dependencies]
multistore.workspace = true
bytes.workspace = true
http.workspace = true
tracing.workspace = true
object_store.workspace = true
futures.workspace = true
http-body.workspace = true
http-body-util.workspace = true
async-trait.workspace = true

# Cloudflare Workers SDK
worker.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true

[dependencies.getrandom_v02]
package = "getrandom"
version = "0.2"
features = ["js"]

[dependencies.getrandom_v03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]
