[package]
name = "multistore"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime-agnostic core library for the S3 proxy gateway"

[features]
default = []
azure = ["object_store/azure"]
gcp = ["object_store/gcp"]

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
http.workspace = true
chrono.workspace = true
url.workspace = true
quick-xml.workspace = true
tracing.workspace = true
object_store.workspace = true
futures.workspace = true
s3s.workspace = true
dashmap.workspace = true
