[package]
name = "multistore-credential-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Single-flight, proactively-refreshing in-memory cache for short-lived credentials"

[dependencies]
chrono.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
