[package]
name = "multistore-metering"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Usage metering and quota enforcement for the S3 proxy gateway"

[dependencies]
multistore.workspace = true
tracing.workspace = true

[dev-dependencies]
futures.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
