[package]
authors = ["Anthony Lukach <anthonylukach@gmail.com>"]
edition = "2021"
name = "cf-workers-api"
version = "0.1.0"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
multistore = {path = "../../multistore"}

bytes = "1.10.1"
console_error_panic_hook = {version = "0.1.7"}
futures = "0.3.31"
http = "1.1"
http-body-util = "0.1.3"
object_store = {version = "0.12.2", features = ["aws"], default-features = false}
s3s = {version = "0.12.0-dev"}
serde_yaml = "0.9.34"
web-sys = "0.3.77"
worker = {version = "0.7.0", features = ["http"]}
worker-macros = {version = "0.7.0", features = ["http"]}
hyper = "1.6.0"

[dependencies.getrandom_v03]
features = ["wasm_js"]
package = "getrandom"
version = "0.3"

[dependencies.getrandom_v02]
features = ["js"]
package = "getrandom"
version = "0.2"
