[package]
name = "multistore-cf-workers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cloudflare Workers runtime for the S3 proxy gateway"

[lib]
crate-type = ["cdylib"]

[dependencies]
multistore.workspace = true
multistore-sts.workspace = true
multistore-oidc-provider.workspace = true
bytes.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
quick-xml.workspace = true
url.workspace = true
object_store.workspace = true
futures.workspace = true
http-body.workspace = true
http-body-util.workspace = true
async-trait.workspace = true
reqwest.workspace = true

# Cloudflare Workers SDK
worker.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true
console_error_panic_hook.workspace = true

[dependencies.getrandom_v02]
package = "getrandom"
version = "0.2"
features = ["js"]

[dependencies.getrandom_v03]
package = "getrandom"
version = "0.3"
features = ["wasm_js"]
