[package]
name = "multistore-lambda"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AWS Lambda runtime for the S3 proxy gateway"

[dependencies]
multistore.workspace = true
multistore-static-config.workspace = true
s3s.workspace = true
lambda_http = "0.13"
tokio.workspace = true
http.workspace = true
bytes.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
object_store.workspace = true
http-body-util.workspace = true
