[package]
name = "multistore-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tokio/Hyper runtime for the S3 proxy gateway"

[dependencies]
multistore = { workspace = true, features = ["azure", "gcp"] }
s3s.workspace = true
multistore-static-config.workspace = true
multistore-sts.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
reqwest = { workspace = true, features = ["stream"] }
object_store.workspace = true
hyper-util.workspace = true
